# glgl

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  make.sh  setup.cfg  setup.py
glgl/: __init__.py  __main__.py  cli.py  gl.py  hash.py  nohup.out
glgl/data/: default_config.json  example_config.json
