[metadata]
name = glgl
version = attr: glgl.__version__
description = GL840 CUI control tool
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT
author = Keita Mizukoshi
author_email = mizukoshi.keita@jaxa.jp
classifiers= 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
[options]
packages = find:
install_requires = 
    PyMySQL
    numpy
    psutil
include_package_data = True
[options.entry_points]
console_scripts = 
    glgl = glgl.cli:main

